# ANN_VECTOR_RETRIEVAL

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
MyTestProgram/: CMakeLists.txt  README.md  test_lib_factory.cpp  trans_format.cpp
MyTestProgram/faiss_original_src/: Clustering(1).h  Clustering.cpp  Index(1).cpp  Index.h  IndexFlat(1).h  IndexFlat.cpp  IndexFlatCodes.cpp  IndexHNSW.cpp  IndexHNSW.h  IndexIVF.cpp  IndexIVF.h  IndexIVFFlat.cpp  IndexIVFFlat.h  IndexIVFPQ.cpp  IndexNSG.cpp  IndexPQ.h  VectorTransform.cpp  VectorTransform.h
MyTestProgram/faiss_original_src/impl/: AuxIndexStructures(1).h  AuxIndexStructures(2).cpp  DistanceComputer(1).h  FaissException.cpp  FaissException.h  HNSW(1).cpp  HNSW.h  NSG(1).cpp  NSG(1).h  ProductQuantizer(1).cpp  ProductQuantizer-inl(1).h  ProductQuantizer.h  Quantizer(1).h  ResidualQuantizer.h  ResultHandler(1).h  index_write.cpp  kmeans1d(2).cpp
MyTestProgram/faiss_original_src/invlists/: DirectMap(1).h  DirectMap.cpp  InvertedLists(1).cpp  InvertedLists.h  OnDiskInvertedLists.cpp
MyTestProgram/faiss_original_src/utils/: Heap(1).h  distances.cpp  distances_simd(1).cpp  ordered_key_value.h  random.cpp  utils.cpp
dataset/siftDataset/sift10K_txt/: siftsmall_groundtruth.txt  siftsmall_query.txt
faiss/: IndexHNSW.cpp  IndexHNSW.h
faiss/impl/: HNSW.cpp  HNSW.h
faiss/python/: CMakeLists.txt
tutorial/cpp/: CMakeLists.txt  test_speed_all.cpp
